ex6/testdata/typechecker/error/DeclTest-err.java
class DeclTest {
	public static void main(String[] a){
    }
}

class A {
    
    A m(boolean x)
    {    
        return new A();
    }

    A m() { // TE
        return new A();
    }
}

